Implemented impact functionality.
